# idletorta

./: README.md  TASKS.md  pyproject.toml  tasks.md
idle-rpg/: .gitignore  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
idle-rpg/public/: index.html
idle-rpg/src/: main.tsx
idle-rpg/src/components/: AppShell.tsx  CombatLog.tsx  FormationPanel.tsx  HeroRoster.tsx  InventoryPanel.tsx  ResourceBar.tsx  TalentTree.tsx  WorldMap.tsx
idle-rpg/src/game/items/: index.ts
idle-rpg/src/game/models/: hero.ts  index.ts  item.ts  location.ts  resource.ts  stats.ts
idle-rpg/src/game/persistence/: saveManager.ts
idle-rpg/src/game/state/: GameStateContext.tsx  playerState.ts  progression.ts
idle-rpg/src/game/systems/: combatLoop.ts  idling.ts
idle-rpg/src/game/talents/: index.ts  types.ts
idle-rpg/src/game/world/: index.ts
idle-rpg/src/styles/: main.css
idletorta/: __init__.py  __main__.py  tasks.py
tests/: conftest.py  test_cli.py  test_tasks.py
